ecmascript/parser/tests/typescript-errors/tsc/constEnums/constEnum2/input.ts.stderr
error: Expected ,, got Some(g)
  --> $DIR/tests/typescript-errors/tsc/constEnums/constEnum2/input.ts:14:5
   |
14 |     g = CONST,
   |     ^

